changes to custom config files

--- a/tools/cfgs/kitti_models/pointpillar.yaml
+++ b/tools/cfgs/kitti_models/pointpillar.yaml
@@ -5,7 +5,7 @@ DATA_CONFIG:
     POINT_CLOUD_RANGE: [0, -39.68, -3, 69.12, 39.68, 1]
     DATA_PROCESSOR:
         - NAME: mask_points_and_boxes_outside_range
-          REMOVE_OUTSIDE_BOXES: True
+          REMOVE_OUTSIDE_BOXES: False
 
         - NAME: shuffle_points
           SHUFFLE_ENABLED: {
@@ -24,7 +24,7 @@ DATA_CONFIG:
         DISABLE_AUG_LIST: ['placeholder']
         AUG_CONFIG_LIST:
             - NAME: gt_sampling
-              USE_ROAD_PLANE: True
+              USE_ROAD_PLANE: False
               DB_INFO_PATH:
                   - kitti_dbinfos_train.pkl
               PREPARE: {
