--- a/tools/cfgs/dataset_configs/kitti_custom_dataset.yaml
+++ b/tools/cfgs/dataset_configs/kitti_custom_dataset.yaml
@@ -14,7 +14,7 @@ INFO_PATH: {
 }
 
 GET_ITEM_LIST: ["points"]
-FOV_POINTS_ONLY: True
+FOV_POINTS_ONLY: False
 
 DATA_AUGMENTOR:
     DISABLE_AUG_LIST: ['placeholder']
