--- a/tools/cfgs/kitti_models/pointpillar_custom.yaml
+++ b/tools/cfgs/kitti_models/pointpillar_custom.yaml
@@ -35,7 +35,7 @@ DATA_CONFIG:
               SAMPLE_GROUPS: ['car:15','human:15']
               NUM_POINT_FEATURES: 4
               DATABASE_WITH_FAKELIDAR: False
-              REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
+              # REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
               LIMIT_WHOLE_SCENE: False
 
             - NAME: random_world_flip
@@ -134,7 +134,7 @@ MODEL:
 
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 4
-    NUM_EPOCHS: 80
+    NUM_EPOCHS: 5
 
     OPTIMIZER: adam_onecycle
     LR: 0.003
