configuration changes for pointpillars

--- a/tools/cfgs/dataset_configs/kitti_dataset.yaml
+++ b/tools/cfgs/dataset_configs/kitti_dataset.yaml
@@ -24,8 +24,8 @@ DATA_AUGMENTOR:
           DB_INFO_PATH:
               - kitti_dbinfos_train.pkl
           PREPARE: {
-             filter_by_min_points: ['Car:5', 'Pedestrian:5', 'Cyclist:5'],
-             filter_by_difficulty: [-1],
+            #  filter_by_min_points: ['Car:5', 'Pedestrian:5', 'Cyclist:5'],
+            #  filter_by_difficulty: [-1],
           }
 
           SAMPLE_GROUPS: ['Car:20','Pedestrian:15', 'Cyclist:15']
@@ -53,7 +53,7 @@ POINT_FEATURE_ENCODING: {
 
 DATA_PROCESSOR:
     - NAME: mask_points_and_boxes_outside_range
-      REMOVE_OUTSIDE_BOXES: True
+      REMOVE_OUTSIDE_BOXES: False
 
     - NAME: shuffle_points
       SHUFFLE_ENABLED: {
