--- a/tools/cfgs/dataset_configs/kitti_custom_dataset.yaml
+++ b/tools/cfgs/dataset_configs/kitti_custom_dataset.yaml
@@ -32,7 +32,7 @@ DATA_AUGMENTOR:
           NUM_POINT_FEATURES: 4
           DATABASE_WITH_FAKELIDAR: False
           REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
-          LIMIT_WHOLE_SCENE: True
+          LIMIT_WHOLE_SCENE: False
 
         - NAME: random_world_flip
           ALONG_AXIS_LIST: ['x']
@@ -46,14 +46,16 @@ DATA_AUGMENTOR:
 
 POINT_FEATURE_ENCODING: {
     encoding_type: absolute_coordinates_encoding,
-    used_feature_list: ['x', 'y', 'z', 'intensity'],
-    src_feature_list: ['x', 'y', 'z', 'intensity'],
+    used_feature_list: ['x', 'y', 'z'],
+    src_feature_list: ['x', 'y', 'z']
+    # used_feature_list: ['x', 'y', 'z', 'intensity'],
+    # src_feature_list: ['x', 'y', 'z', 'intensity'],
 }
 
 
 DATA_PROCESSOR:
     - NAME: mask_points_and_boxes_outside_range
-      REMOVE_OUTSIDE_BOXES: True
+      REMOVE_OUTSIDE_BOXES: False
 
     - NAME: shuffle_points
       SHUFFLE_ENABLED: {
@@ -62,8 +64,8 @@ DATA_PROCESSOR:
       }
 
     - NAME: transform_points_to_voxels
-      VOXEL_SIZE: [0.05, 0.05, 0.1]
-      MAX_POINTS_PER_VOXEL: 5
+      VOXEL_SIZE: [0.05, 0.05, 3] #[0.05, 0.05, 0.1]
+      MAX_POINTS_PER_VOXEL: 25 #5
       MAX_NUMBER_OF_VOXELS: {
         'train': 16000,
         'test': 40000
