--- a/tools/cfgs/kitti_models/pointpillar_custom.yaml
+++ b/tools/cfgs/kitti_models/pointpillar_custom.yaml
@@ -5,7 +5,7 @@ DATA_CONFIG:
     POINT_CLOUD_RANGE: [0, -39.68, -3, 69.12, 39.68, 1]
     DATA_PROCESSOR:
         - NAME: mask_points_and_boxes_outside_range
-          REMOVE_OUTSIDE_BOXES: True
+          REMOVE_OUTSIDE_BOXES: False
 
         - NAME: shuffle_points
           SHUFFLE_ENABLED: {
@@ -15,7 +15,7 @@ DATA_CONFIG:
 
         - NAME: transform_points_to_voxels
           VOXEL_SIZE: [0.16, 0.16, 4]
-          MAX_POINTS_PER_VOXEL: 32
+          MAX_POINTS_PER_VOXEL: 64 #32
           MAX_NUMBER_OF_VOXELS: {
             'train': 16000,
             'test': 40000
@@ -32,10 +32,10 @@ DATA_CONFIG:
                 #  filter_by_difficulty: [-1],
               }
 
-              SAMPLE_GROUPS: ['car:15','human:15']
+              SAMPLE_GROUPS: ['car:15','human:5']
               NUM_POINT_FEATURES: 4
               DATABASE_WITH_FAKELIDAR: False
-              # REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
+              REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
               LIMIT_WHOLE_SCENE: False
 
             - NAME: random_world_flip
@@ -134,7 +134,7 @@ MODEL:
 
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 4
-    NUM_EPOCHS: 5
+    NUM_EPOCHS: 20
 
     OPTIMIZER: adam_onecycle
     LR: 0.003
